--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -15,6 +15,7 @@ logback = "1.3.14"
 junit5 = "5.13.2"
 intellij = "252.27397.106"
 serialization = "1.8.1"
+atomicfu = "0.29.0"
 
 [libraries]
 compiler-plugin = { module = "org.jetbrains.kotlinx:compiler-plugin" }
@@ -78,3 +79,4 @@ ktor = { id = "io.ktor.plugin", version.ref = "ktor" }
 
 # gradle-plugin project
 kotlinx-remote = { id = "org.jetbrains.kotlinx.kremote.plugin", version.ref = "kotlinx-rpc" }
+atomicfu = { id = "org.jetbrains.kotlinx.atomicfu", version.ref = "atomicfu" }
