--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -16,6 +16,7 @@ atomicfu = "0.29.0"
 slf4j = "2.0.17"
 logback = "1.3.14"
 coroutines = "1.10.2"
+datetime = "0.6.1"
 ktor = "3.2.1"
 
 
@@ -59,6 +60,7 @@ serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-jso
 
 atomicfu = { module = "org.jetbrains.kotlinx:atomicfu", version.ref = "atomicfu" }
 coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "coroutines" }
+datetime = { module = "org.jetbrains.kotlinx:kotlinx-datetime", version.ref = "datetime" }
 
 
 [plugins]
